--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,3 +1,4 @@
-<h1>Sexo com casadas</h1>
+<h1>Profile Page</h1>
 <p>Find me in app/views/pages/profile.html.erb</p>
-<%= @user.email %>
+<p>  <%= @user.email %>  </p>
+<p><%= link_to '+ Add your Co-Hemp', new_cohemp_path %></p>
