--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,4 +1,19 @@
 <h1>Profile Page</h1>
-<p>Find me in app/views/pages/profile.html.erb</p>
-<p>  <%= @user.email %>  </p>
-<p><%= link_to '+ Add your Co-Hemp', new_cohemp_path %></p>
+
+<p>  Hello <%= @user.email %>!  </p>
+<p>Your Co-Hemps:</p>
+<ul class="list-group">
+    <% @cohemps.each do |cohemp| %>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        <%= link_to cohemp.description, cohemp_path(cohemp) %>
+      </li>
+    <% end %>
+<p><%= link_to '+ Add Co-Hemp', new_cohemp_path %></p>
+<p>Your Bookings:</p>
+<ul class="list-group">
+    <% @bookings.each do |booking| %>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        <%= booking.date%>
+        <%= booking.cohemp.description %>
+      </li>
+    <% end %>
