--- a/app/views/cohemps/show.html.erb
+++ b/app/views/cohemps/show.html.erb
@@ -14,3 +14,11 @@
   <%= f.input :status %>
   <p><%= f.submit "Book Co-Hemp", class: "btn btn-primary" %></p>
 <% end %>
+
+
+
+<div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+</div>
