--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -16,8 +16,16 @@
         <%= booking.date%> |
         <%= booking.cohemp.description %> |
         <%= booking.status%>
-        <%= link_to 'Cancel this booking', booking_path(booking.id), method: :patch %>
-
-
+        <%= link_to 'Cancel this booking', booking_cancel_path(booking.id), method: :patch %>
+      </li>
+    <% end %>
+<p>Reservations to your Co-Hemps:</p>
+<ul class="list-group">
+    <% @reservations.each do |reservation| %>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        <%= reservation.date%> |
+        <%= reservation.cohemp.description %> |
+        <%= reservation.status%>
+        <%= link_to 'Accept this booking', booking_approve_path(reservation.id), method: :patch %>
       </li>
     <% end %>
