--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   <div class="container">
     <h1>Le Co-hemps  for <strong>creative people</strong>!</h1>
     <p>Change your lifestyle and learn to smoke and create at one of our cohemps around the world.</p>
-    <a class="btn btn-flat" href="user_session_path">regiter now</a>
+    <a class="btn btn-flat" href="new_user_session_path" >regiter now</a>
 
   </div>
 </div>
@@ -16,6 +16,7 @@
       </li>
     <% end %>
 </ul>
+
 
 
 
