--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,6 @@
     <h1>Le Co-hemps  for <strong>creative people</strong>!</h1>
     <p>Change your lifestyle and learn to smoke and create at one of our cohemps around the world.</p>
     <a class="btn btn-flat" href="new_user_session_path" >regiter now</a>
-
   </div>
 </div>
 
@@ -17,6 +16,22 @@
     <% end %>
 </ul>
 
+<div class="row">
+        <% @cohemps.each do |cohemp| %>
+            <div class="card col-4">
+                <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://gooutside-static-cdn.akamaized.net/wp-content/uploads/sites/3/2020/03/fumar-maconha.jpg')">
+                  <h5 class="card-title"> <%= cohemp.description %> </h5>
+
+                </div>
+
+
+                <div class="card-body">
+                   <%= link_to 'more infos', cohemp_path(cohemp), class: "btn btn-success" %>
+              </div>
+
+            </div>
+        <% end %>
+</div>
 
 
 
