--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,14 +4,14 @@
   <div class="container">
     <h1>Le Co-hemps  for <strong>creative people</strong>!</h1>
     <p>Change your lifestyle and learn to smoke and create at one of our cohemps around the world.</p>
-    <a class="btn btn-flat" href="new_user_session_path" >register now</a>
+    <a class="btn btn-flat" href="/users/sign_up" >register now</a>
   </div>
 </div>
 
 <ul class="list-group">
     <% @cohemps.each do |cohemp| %>
       <li class="list-group-item d-flex justify-content-between align-items-center">
-        <%= link_to cohemp.description, cohemp_path(cohemp) %>
+        <%= link_to cohemp.name, cohemp_path(cohemp) %>
       </li>
     <% end %>
 </ul>
@@ -20,7 +20,7 @@
         <% @cohemps.each do |cohemp| %>
             <div class="card col-4">
                 <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://gooutside-static-cdn.akamaized.net/wp-content/uploads/sites/3/2020/03/fumar-maconha.jpg')">
-                  <h5 class="card-title"> <%= cohemp.description %> </h5>
+                  <h5 class="card-title"> <%= cohemp.name %> </h5>
 
                 </div>
 
