--- a/app/views/cohemps/show.html.erb
+++ b/app/views/cohemps/show.html.erb
@@ -9,11 +9,13 @@
 <% end %>
 <p>Owner: <%= @cohemp.user.email %></p>
 <% if @cohemp.id != current_user.id %>
-  <p>Book this Co-Hemp:</p>
-  <%= simple_form_for [@cohemp, @booking] do |f| %>
-    <%= f.input :date %>
-    <p><%= f.submit "Book Co-Hemp", class: "btn btn-primary" %></p>
+<p>Book this Co-Hemp:</p>
+<%= simple_form_for [@cohemp, @booking] do |f| %>
+  <%= f.input :date %>
+  <% @cohemp.photos.each do |photo| %>
+    <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
   <% end %>
+  <p><%= f.submit "Book Co-Hemp", class: "btn btn-primary" %></p>
 <% end %>
 
 <div id="map"
