--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,16 +1,27 @@
-// Graphical variables
-@import "config/fonts";
-@import "config/colors";
-@import "config/bootstrap_variables";
+// Co-hemp variables
+@import "partials/_variables";
+@import "partials/_reset";
+@import "partials/_utils";
+
+// Co-hemps partials
+@import "partials/_button";
+@import "partials/card_horizontal";
 
 // External libraries
-@import "bootstrap/scss/bootstrap";
+// @import "bootstrap/scss/bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import 'mapbox-gl/dist/mapbox-gl';
-@import '@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder';
+@import "mapbox-gl/dist/mapbox-gl";
+@import "@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder";
 
-// Your CSS partials
+// Le Wagon's partials
 @import "components/index";
 @import "pages/index";
 
+body {
+  display: grid;
+  grid-template-rows: 60px 1fr;
+  main {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+}
