--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,79 @@
-.navbar-lewagon {
+.nav {
+  grid-area: navbar;
+  display: flex;
+  align-items: center;
   justify-content: space-between;
-  background: white;
-}
-
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 100%;
+  height: 60px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  padding: 0 60px;
+  z-index: 2;
+  background: $white;
+  @media screen and (max-width: 420px) {
+    padding: 0 10px;
+  }
+  &__list {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+  .list-item{
+    cursor: pointer;
+    a {
+      color: $black;
+      font: {
+        size: $ft-size-text1;
+        family: $roboto;
+        weight: $ft-normal;
+      }
+      transition: color .3s ease-in-out;
+      &:hover {
+        color: $green !important;
+      }
+      &:active,
+      &:visited {
+        color: $darkestgreen;
+      }
+    }
+    &.dropdown {
+      display: flex;
+      align-items: flex-end;
+      flex-flow: column wrap;
+      position: relative;
+      top: 50px;
+    }
+    @at-root .dropdown {
+      content:'';
+      &:hover > .dropdown-container {
+        opacity: 1;
+        transform: translateY(20%);
+      }
+      &-container {
+        display: flex;
+        align-items: center;
+        flex-flow: column wrap;
+        gap: 15px 0;
+        width: 120px;
+        min-height: 100px;
+        position: relative;
+        z-index: 3;
+        top: 100%;
+        right: 0;
+        transform: translateY(0%);
+        transition: 
+          opacity 0.4s ease-in-out,
+          transform 0.4s ease-in;
+        background-color: $white;
+        border-radius: $medium-radius;
+        opacity: 0;
+        padding: 10px;
+      }
+      &__image {
+        border-radius: 50% 50%;
+        object-fit: cover;
+      }
+    }
+  }
 }
