added two more sectons to home frontend

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,7 @@
 // Co-hemps partials
 @import "partials/_button";
 @import "partials/card_horizontal";
+@import "partials/card_vertical";
 
 // External libraries
 // @import "bootstrap/scss/bootstrap";
