--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,7 +2,7 @@
 .home {
   max-width: 100%;
   min-height: 100vh;
-  overflow-x: hidden;
+  overflow: hidden;
   display: grid;
   grid-template-areas:
     "banner banner banner"
@@ -46,7 +46,6 @@
     grid-area: highlights;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: min-content 1fr;
-    padding: 0 60px;
     gap: 10px;
     @media screen and (max-width: 1412px) {
       grid-template-columns: 1fr;
@@ -66,5 +65,62 @@
   }
   .cohemps {
     grid-area: cohemps;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 74px 1fr;
+    position: relative;
+    @media screen and (max-width: 1287px) {
+      grid-template-columns: initial;
+      grid-template-rows: 74px 1fr 600px;
+      gap: 60px 0;
+    }
+    @media screen and (max-width: 420px) {
+      grid-template-columns: initial;
+      grid-template-rows: 74px 1fr min-content;
+      gap: 60px 0;
+    }
+    .title-1 {
+      color: $black;
+      grid-area: 1 / 1 / 2 / 3;
+      @media screen and (max-width: 1412px) {
+        grid-area: initial;
+        justify-self: start;
+      }
+    }
+    .cohemp{
+      &-container {
+        display: grid;
+        grid-area: 2 / 1 / 3 / 2;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+        gap: 15px;
+        @media screen and (max-width: 1287px) {
+          grid-area: 2 / 1 / 3 / 2;
+          left: 0;
+          place-items: center;
+        }
+      }
+      &__map{
+        width: 100%;
+        height: 100%;
+        max-height: 600px;
+        background: $lightgrey;
+        grid-area: 2 / 2 / 3 / 3;
+        border-radius: 20px 0 0 20px;
+        position: relative;
+        top: 0;
+        right: -60px;
+        @media screen and (max-width: 1287px) {
+          grid-area: 3 / 1 / 4 / 2;
+          left: 0;
+          width: 120%;
+        }
+        @media screen and (max-width: 420px) {
+          display: none;
+        }
+      }
+    }
+  }
+  .about {
+    grid-area: about;
   }
 }
