--- a/app/assets/stylesheets/partials/_card_horizontal.scss
+++ b/app/assets/stylesheets/partials/_card_horizontal.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-flow: row nowrap;
   flex: 1;
-  gap: 0 20px;
+  gap: 20px;
   padding: 5px;
   @media screen and (max-width: 560px) {
     flex-flow: column nowrap;
