--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,20 +17,31 @@
       cohemp: @cohemps.find(2)
     } %>
   </div>
-  <div class="cohemps">
-    <% @cohemps.first(4).each do |cohemp| %>
-        <div class="card col-4">
-          <img class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://gooutside-static-cdn.akamaized.net/wp-content/uploads/sites/3/2020/03/fumar-maconha.jpg')" />
-          <h5 class="card-title"> <%= cohemp.address %> </h5>
-          <div class="card-body">
-            <%= link_to "more infos", cohemp_path(cohemp), class: "btn btn-success" %>
-          </div>
-        </div>
-    <% end %>
-    <div id="map"
-        style="width: 100%; height: 600px; background: grey;"
+  <div class="cohemps mt-lg">
+    <h2 class="title-1">Co-hemps</h2>
+    <div class="cohemp-container">
+      <% @cohemps.first(4).each do |cohemp| %>
+        <%= link_to cohemp_path(cohemp) do %>
+          <%= render partial: "shared/card_vertical.html.erb", locals: {
+              cohemp: cohemp
+            } %>
+          <% end %>
+      <% end %>
+    </div>
+    <div id="map" class="cohemp__map"
         data-markers="<%= @markers.to_json %>"
         data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"] %>">
+    </div>
+  </div>
+  <div class="about mt-md">
+    <img src="" alt="" class="about__img">
+    <div class="about__container">
+      <h2 class="title-1">Sobre nós</h2>
+      <p class="text-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere dolores cumque atque rerum consequatur eveniet est, dolor iste in odio quasi perferendis, repellendus voluptatum omnis quisquam delectus porro quia hic?</p>
+      <%= render partial: "shared/button", locals: {
+                 variant: "btn-green mt-sm",
+                 title: "Ver reservas",
+               } %>
     </div>
   </div>
 </main>
