finished home frontend

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,12 +34,12 @@
     </div>
   </div>
   <div class="about mt-md">
-    <img src="" alt="" class="about__img">
+    <img src="https://source.unsplash.com/285x220/?corporate" alt="" class="about__img">
     <div class="about__container">
-      <h2 class="title-1">Sobre nós</h2>
-      <p class="text-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere dolores cumque atque rerum consequatur eveniet est, dolor iste in odio quasi perferendis, repellendus voluptatum omnis quisquam delectus porro quia hic?</p>
+      <h2 class="title-1 mt-sm">Sobre nós</h2>
+      <p class="text-1 mt-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere dolores cumque atque rerum consequatur eveniet est, dolor iste in odio quasi perferendis, repellendus voluptatum omnis quisquam delectus porro quia hic?</p>
       <%= render partial: "shared/button", locals: {
-                 variant: "btn-green mt-sm",
+                 variant: "btn-green mt-md",
                  title: "Ver reservas",
                } %>
     </div>
