--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "partials/_button";
 @import "partials/card_horizontal";
 @import "partials/card_vertical";
+@import "partials/footer";
 
 // External libraries
 // @import "bootstrap/scss/bootstrap";
@@ -21,8 +22,11 @@
 
 body {
   display: grid;
-  grid-template-rows: 60px 1fr;
+  grid-template-rows: 60px 1fr 60px;
   main {
     grid-area: 2 / 1 / 3 / 2;
+  }
+  footer {
+    grid-area: 3 / 1 / 4 / 2;
   }
 }
