--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="nav">
-  <%= link_to image_tag("cannabis (1).png") %>
+  <%= link_to image_tag("cohemp-green.svg") %>
 
   <ul class="nav__list">
     <% if user_signed_in? %>
