--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,14 +10,17 @@
 
 <ul class="list-group">
     <% @cohemps.each do |cohemp| %>
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        <%= link_to cohemp.name, cohemp_path(cohemp) %>
-      </li>
+      <% if cohemp.availability %>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <%= link_to cohemp.name, cohemp_path(cohemp) %>
+        </li>
+      <% end %>
     <% end %>
 </ul>
 
 <div class="row">
         <% @cohemps.each do |cohemp| %>
+          <% if cohemp.availability %>
             <div class="card col-4">
                 <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://gooutside-static-cdn.akamaized.net/wp-content/uploads/sites/3/2020/03/fumar-maconha.jpg')">
                   <h5 class="card-title"> <%= cohemp.name %> </h5>
@@ -30,6 +33,7 @@
               </div>
 
             </div>
+          <% end %>
         <% end %>
 </div>
 
