--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -5,7 +5,7 @@
 <ul class="list-group">
     <% @cohemps.each do |cohemp| %>
       <li class="list-group-item d-flex justify-content-between align-items-center">
-        <%= link_to cohemp.description, cohemp_path(cohemp) %>
+        <%= link_to cohemp.name, cohemp_path(cohemp) %>
       </li>
     <% end %>
 </ul>
