--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer mt-md">
   <%= link_to image_tag("cohemp-white.svg"), class: "footer__logo" %>
-  <p class="footer__right">All rights reserved ™</p>
+  <p class="footer__right">Todos os seus direitos fumados ™</p>
   <div class="footer__social">
     <i class="fab fa-instagram"></i>
     <i class="fab fa-twitter"></i>
