--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -10,6 +10,7 @@
     "... cohemps ..."
     "... about ...";
   grid-template-columns: 60px 1fr 60px;
+  padding-bottom: 120px;
   @media screen and (max-width: 400px) {
     grid-template-columns: 10px 1fr 10px;
   }
