--- a/app/assets/stylesheets/partials/_footer.scss
+++ b/app/assets/stylesheets/partials/_footer.scss
@@ -4,8 +4,11 @@
   flex-wrap: nowrap;
   justify-content: space-between;
   padding: 15px 60px;
-  height: 100%;
+  height: 60px;
   width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 
   background: $green;
   color: $white;
