--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,8 +7,8 @@
         <%= link_to "Home", root_path, class: "" %>
       </li>
       <li class="list-item dropdown">
-      
-        <%= image_tag "https://source.unsplash.com/40x40/?person", 
+
+        <%= cl_image_tag current_user.image.key, :width => 40, :height => 40, :gravity=>"faces", :crop=>"fill", :default_image => "cohemp-green.svg",
           class: "dropdown__image",
           id: "navbarDropdown",
           'aria-haspopup': true,
@@ -19,7 +19,7 @@
         </div>
       </li>
     <% else %>
-      <li class="list-item">  
+      <li class="list-item">
         <%= link_to "Login", new_user_session_path, class: "" %>
       </li>
     <% end %>
