--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -2,7 +2,7 @@
   <div class="profile__info mt-sm">
     <h1 class="title-1 mt-sm mb-sm">Perfil</h1>
     <%# Colocar image tag aqui %>
-    <img src="https://source.unsplash.com/285x220/?person" alt="" class="profile__img">
+    <%= cl_image_tag current_user.image.key, :gravity=>"faces", :crop=>"fill", :default_image => "cohemp-green.svg", :class =>"profile__img" %>
     <div class="profile__details">
       <h2 class="title-2 mt-sm">Nome</h2>
       <p class="text-1">Nome do usuário<%# @user.name %></p>
