front finalizado (mais ou menos)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,9 @@
 @import "partials/card_horizontal";
 @import "partials/card_vertical";
 @import "partials/footer";
+@import "partials/inputs";
 @import "pages/profile";
+@import "pages/show";
 
 // External libraries
 
