--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,7 +1,7 @@
 .show {
   color: $black;
   margin-top: 90px;
-  padding: 0 60px;
+  border-radius: $medium-radius;
   display: block;
   display: grid;
   max-height: 100vh;
@@ -14,16 +14,27 @@
     position: relative;
     left: -60px;
     object-fit: cover;
+    flex: 1;
+  }
+  &-photos {
+    grid-area: 1 / 1 / 2 / 2;
+    overflow: hidden;
+    display: flex;
+  }
+  &-container {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+  &-info {
+    grid-area: 2 / 1 / 3 / 2;
   }
 }
 #map {
-  min-width: 350px;
+  grid-area: 2 / 2 / 3 / 3;
+  max-width: 400px;
   width: 100%;
-  min-height: 350px;
+  max-height: 350px;
   background: $grey;
-  position: relative;
-  right: -60px;
-  border-radius: 20px 0 0 20px;
+  border-radius: $medium-radius;
 }
 
 .alert {
