--- a/app/views/cohemps/show.html.erb
+++ b/app/views/cohemps/show.html.erb
@@ -1,12 +1,14 @@
 <section class="show">
-  <% if @cohemp.photos.attached? %>
-    <% @cohemp.photos.each do |photo| %>
-      <%= photo.key %>
-      <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill, class: "show-image" %>
+  <div class="show-photos">
+    <% if @cohemp.photos.attached? %>
+      <% @cohemp.photos.each do |photo| %>
+        <%= photo.key %>
+        <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill, class:"show-image" %>
+      <% end %>
+    <% else %>
+      <img src="https://source.unsplash.com/285x220/?building" alt="" class="show-image">
     <% end %>
-  <% else %>
-    <img src="https://source.unsplash.com/285x220/?building" alt="" class="show-image">
-  <% end %>
+  </div>
   <div class="show-container">
     <h1 class="title-1 mb-sm">Informações do Cohemp</h1>
     <h2 class="title-2 mt-sm">Nome</h2>
@@ -38,6 +40,5 @@
       data-markers="<%= @markers.to_json %>"
       data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"] %>">
   </div>
-
 </section>
 
