--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,12 +7,11 @@
         <%= link_to "Home", root_path, class: "" %>
       </li>
       <li class="list-item dropdown">
-
-        <%= cl_image_tag current_user.image.key, :width => 40, :height => 40, :gravity=>"faces", :crop=>"fill", :default_image => "cohemp-green.svg",
-          class: "dropdown__image",
-          id: "navbarDropdown",
-          'aria-haspopup': true,
-          'aria-expanded': false %>
+        <% if current_user.image.attached? %>
+          <%= cl_image_tag current_user.image.key, :width => 40, :height => 40, :gravity => "faces", :crop => "fill", :default_image => "cohemp-green.png", class: "dropdown__image" %>
+        <% else %>
+          <img src="https://source.unsplash.com/40x40/?person" alt="" class="dropdown__image">
+        <% end %>
         <div class="dropdown-container" aria-labelledby="navbarDropdown">
           <%= link_to "Profile", profile_path, class: "" %>
           <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "" %>
