--- a/app/assets/stylesheets/partials/_button.scss
+++ b/app/assets/stylesheets/partials/_button.scss
@@ -31,3 +31,11 @@
     }
   }
 }
+
+button.close {
+  width: 20px;
+  height: 20px;
+  border-radius: 50% 50%;
+  background: $green;
+  color: $white;
+}
